--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -10,7 +10,7 @@
     "en": "JBL Synthesis"
   },
   "description": {
-    "en": "Control your JBL Synthesis receiver (SDR-35, SDR-38, SDP-55, SDP-58)"
+    "en": "JBL Synthesis brings award-winning sound to your home."
   },
   "brandColor": "#000000",
   "category": [
