--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "en": "JBL Synthesis"
   },
   "description": {
-    "en": "Award-winning home theater sound at your fingertips."
+    "en": "Award-winning sound at home"
   },
   "brandColor": "#000000",
   "category": [
